# face2face

./: .gitignore  CONTRIBUTING.md  INSTALL.md  PLAN.md  README.md  REAL_TEST_GUIDE.md  pyproject.toml  test-proxy.ps1
deploy/: bootstrap.ps1  bootstrap.py
face2face/: __init__.py
face2face/cli/: __init__.py  calibrate.py  config.py  main.py
face2face/compression/: __init__.py  compress.py
face2face/protocol/: __init__.py  channel.py  flow.py  framing.py  link.py
face2face/proxy/: __init__.py  forwarder.py  serialization.py  server.py
face2face/visual/: __init__.py  camera_sim.py  capture.py  codec.py  decoder.py  ecc.py  monitor.py  renderer.py
tests/: test_camera_sim.py  test_codec.py  test_compression.py  test_e2e.py  test_ecc.py  test_framing.py  test_geometry.py  test_integration.py  test_protocol.py  test_proxy.py  test_visual_roundtrip.py
tools/: capture_readme_images.py  decode_diagnose.py  live_decode_test.py  webcam_check.py
