[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "face2face"
version = "0.1.0"
description = "HTTP proxy that communicates through webcams and screens"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "reedsolo>=1.7",
    "aiohttp>=3.9",
    "msgpack>=1.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
face2face = "face2face.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["face2face*"]
